第二次上传

--- a/index.html
+++ b/index.html
@@ -4,35 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
+    <link rel="stylesheet" href="./sytle.css">
 </head>
 <body>
     <style id="style">
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        #container{
-            display: flex;
-        }
-        #input{
-            width: 50%;
-            height: 100vh;
-            padding: 10px 10px;
-            line-height: 1.5em;
-            font-size: 20px;
-            border: 1px solid red;
-            transform: 
-        }
-        #output{
-            width: 50%;
-            border: 1px solid red;
-        }
+       
     </style>
     <div id="container">
         <div id="input"></div>
         <div id="output">
-            <img src="" alt="">
+            <div class="output_1">
+                
+            </div>
         </div>
     </div>
     <script src="./main.js"></script>
