--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
     <link rel="stylesheet" href="./sytle.css">
 </head>
+
 <body>
     <style id="style">
-       
+
     </style>
     <div id="container">
         <div id="input"></div>
         <div id="output">
             <div class="output_1">
-                
+                <div class="output_2"></div>
+                <div class="name">姓名:李浩</div>
+                <div class="_name_1">英文名:leeHo</div>
+                <div class="_shcool">毕业学校:武汉大学</div>
+                <div class="_blog">博客地址:blog.leeho.cloud</div>
+                <div class="github">GitHub:https://github.com/leehoisleeho</div>
+                <div class="email">邮箱:leehovip@gmail.com</div>
             </div>
         </div>
     </div>
     <script src="./main.js"></script>
 </body>
+
 </html>
